feat: use ArrayList